Fix inconsistent spacing of FirstLevelNavigationItem on older tablets

--- a/patterns/core/GlobalNavigation/DesktopNavigation/desktopNavigation.styl
+++ b/patterns/core/GlobalNavigation/DesktopNavigation/desktopNavigation.styl
@@ -15,17 +15,14 @@ $breakpoint-large = 800px
   height 3.5rem
   position relative
 
-.desktop-navigation__item
-  color var(--neutral-90)
+.desktop-navigation__item-link
+  display block
+  height 100%
   font-size 1.7rem
   font-weight var(--font-weight-semi-bold)
-  line-height 2.4rem
+  line-height 3.5rem
   letter-spacing 0.025rem
-
-.desktop-navigation__item-link
-  display flex
-  align-items center
-  height 100%
+  color var(--neutral-90)
   padding 0 1.5rem
   position relative
 
